[package]
name = "genesis-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
jsonrpc-core = "18.0.0"
jsonrpc-http-server = "18.0.0"
tokio-tungstenite = "0.19.0"
futures = "0.3.28"
futures-util = "0.3"
log = "0.4.20"
env_logger = "0.10.0"
blake2 = "0.10.6"
ed25519-dalek = "1.0.1"
tower = { version = "0.4", features = ["limit"] }
serde = { version = "1.0.191", features = ["derive"] }
serde_json = "1.0.108"
hex = "0.4"  # or the latest stable version

[[bin]]
name = "genesis-node"
path = "src/main.rs"
