[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
sp-io = "38.0.0"
sp-std = "14.0.0"
sp-core = "34.0.0"
serde = { version = "1.0", features = ["derive"] }
frame-support = "37.0.0"
frame-system = "37.0.0"
sp-runtime = "39.0.0"
parity-scale-codec = "3.6.12"
scale-info = { version = "2.11.5", features = ["derive"] }

[features]
try-runtime = []
